src/Services/aimsServices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: erp-system
  labels:
    app.kubernetes.io/part-of: erp-microservices
